--- a/src/sass/menu.scss
+++ b/src/sass/menu.scss
@@ -26,13 +26,16 @@
 
     & .bar.bar1 {
       transform-origin:50% 50%;
-      transform:rotate(45deg)
+      transform:rotate(45deg);
+      background-color: white;
     }
 
     & .bar.bar2 {
       transform-origin:50% 50%;
       margin-top:-2px;
-      transform:rotate(-45deg)
+      transform:rotate(-45deg);
+      background-color: white;
+
     }
 
   }
@@ -63,6 +66,10 @@
 
     a {
       color:white;
+    }
+
+    & .header {
+      border-color:white;
     }
 
 }
