minor mobile improvements.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -62,6 +62,20 @@
   border-color: white;
 }
 
+@media (max-width: 550px) {
+  .header .menu_font .center {
+    display: block;
+  }
+  .hamburger-menu {
+    display: inline;
+  }
+  .revivals {
+    display: none;
+  }
+  .hamburger-button.close {
+    top: -0.25em;
+  }
+}
 @font-face {
   font-family: "Duplicate";
   src: url("/public/fonts/DuplicateSans-Regular-Web.woff") format("woff");
