--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -18,6 +18,9 @@ html, body {
     font-size:20px;
 }
 
+img {
+  max-width:100%;
+}
 
 
 
@@ -33,6 +36,10 @@ section.font {
     text-align:center;
     border-bottom:1px solid $red;
     overflow: hidden;
+
+    &:last-child {
+      border-bottom: none;
+    }
 }
 
 .contain-overflow {
@@ -56,14 +63,107 @@ section.font {
     font-size: 6em;
     overflow-x:hidden;
     outline: none;
-    text-align:center;
-    line-height:1.2;
-    margin:2rem auto;
+    // text-align:center;
+    margin:0 auto;
     max-width:calc(100vw - 2rem);
     border:1px solid $red;
     padding:2rem;
+
+
+    & div {
+      outline: none;
+    }
+
+    & .ttBig   { font-size: 6rem; }
+    & .ttMed   { font-size: 3rem; }
+    & .ttSmall { font-size: 1.5rem; }
+
+
   }
 
+
+  .control_panel {
+    background:$red;
+    font-size:0.9rem;
+    text-align:center;
+    margin:0 1em;
+    padding:3px;
+    height:1.8rem;
+  }
+
+.control_interior {
+  display:inline-grid;
+    grid-template-columns: 200px 100px 200px 140px 30px 30px 30px;
+    grid-gap:0.25rem;
+}
+
+  .slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 1px;
+  background: black;
+  outline: none;
+  margin-top:1rem;
+  width:100%;
+  position:relative;
+  top:-5px;
+
+  &::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 1rem;
+  height: 1rem;
+  border-radius:50%;
+  background: $black;
+  cursor: pointer;
+  border:none;
+}
+
+&::-moz-range-thumb {
+  width: 1rem;
+  height: 1rem;
+  background: $black;
+  cursor: pointer;
+    border-radius:50%;
+    border:none;
+}
+
+}
+
+.text_align {
+  display: inline-flex;
+  flex-direction: column;
+  gap: 5px;
+  margin:7px; 
+  cursor:pointer;
+
+  
+  &:hover .bar,
+  &.active .bar {
+      background:white;
+    }
+  
+
+  & .bar {
+    width:22px;
+    
+
+  &:nth-child(2) {
+      width:18px;
+    }
+  }
+
+  &.center {
+    align-items: center;
+   
+  }
+
+  &.right {
+    align-items: end;
+   
+  }
+  
+}
 
   .metadata {
     text-align: left;
@@ -138,6 +238,10 @@ p {
     }
   }
 
+  .font_full {
+    margin-bottom:2em;
+  }
+
 
   .back_forth {
     display:grid;
@@ -147,9 +251,18 @@ p {
 
 
   #footer {
-    background:$red;
-    color:white;
+    // background:$red;
+    // color:white;
+    border-top:1px solid $red;
+    padding-top:3em;
     min-height:100vh;
+  }
+
+
+  @media (max-width:860px) {
+      .control_panel {
+    display:none;
+  }
   }
 
 
@@ -183,6 +296,8 @@ p {
 
 
 
+
+
     .header {
       display:block;
 
@@ -202,7 +317,7 @@ p {
     }
 
         .tester_text {
-        font-size:2rem;
+        font-size:1.5rem;
     }
 
   }
