added a 100ms fade

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -92,6 +92,7 @@ section.font {
     margin:0 1em;
     padding:3px;
     height:1.8rem;
+    margin-top:2rem;
   }
 
 .control_interior {
@@ -243,6 +244,7 @@ p {
 
   .font_full {
     margin-bottom:2em;
+    margin-top:80px;
   }
 
 
