--- a/src/css/main.css
+++ b/src/css/main.css
@@ -11,6 +11,9 @@
   z-index: 300;
   grid-template-columns: 1fr 1fr 1fr;
 }
+.header .header {
+  background: inherit;
+}
 .header #menu_button {
   cursor: pointer;
 }
@@ -22,6 +25,10 @@
 }
 .header a:hover {
   color: #FF1C17;
+}
+
+.menu_all_fonts {
+  margin-top: 100px;
 }
 
 .hamburger-menu {
@@ -80,6 +87,15 @@
   gap: 0.5em;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   overflow-y: scroll;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 100ms ease-in-out, visibility 100ms ease-in-out;
+  pointer-events: none;
+}
+.menu.visible {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
 }
 .menu a {
   color: white;
@@ -104,6 +120,9 @@
   }
   .header .menu_font .center {
     display: block;
+  }
+  .header .menu_all_fonts {
+    margin-top: 0;
   }
   .hamburger-menu {
     display: inline;
@@ -168,6 +187,9 @@ h2 {
 
 h3 {
   font-size: 4rem;
+  font-size: 4rem;
+  line-height: 1;
+  margin-top: 2rem;
 }
 
 h4 {
@@ -237,9 +259,8 @@ button:hover {
     padding: 1rem 0;
   }
   h3 {
-    padding-top: 1rem;
+    margin-top: 1rem;
     font-size: 2.5rem;
-    line-height: 1;
   }
 }
 *,
@@ -320,6 +341,7 @@ section.font:last-child {
   margin: 0 1em;
   padding: 3px;
   height: 1.8rem;
+  margin-top: 2rem;
 }
 
 .control_interior {
@@ -441,6 +463,7 @@ p {
 
 .font_full {
   margin-bottom: 2em;
+  margin-top: 80px;
 }
 
 .back_forth {
