--- a/src/sass/typography.scss
+++ b/src/sass/typography.scss
@@ -41,6 +41,10 @@ h2 {
 
 h3 {
   font-size:4rem;
+  font-size: 4rem;
+  line-height: 1;
+  margin-top: 2rem;
+
 }
 
 h4 {
@@ -124,9 +128,9 @@ h4 {
     }
 
     h3 {
-      padding-top:1rem;
+      margin-top:1rem;
   font-size:2.5rem;
-  line-height:1;
+  
 }
 
 
